<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_margin="15dp"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <include
            layout="@layout/progressbar"
            android:indeterminateDrawable="@drawable/progressbar_background" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/rootLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/message_box"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:src="@drawable/cchat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/sign_in_to_continue"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/black" />



                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/user_name"
                    android:inputType="text"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="BP No"
                    android:maxLength="10"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@android:color/white"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textPassword"
                        android:hint="Password"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />
                    <ImageView
                        android:id="@+id/ivpassShow"
                        android:layout_toRightOf="@id/etPassword"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="-40dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_view"
                        android:tint="@color/colorPrimaryDark"
                        android:background="@android:color/white"/>

                </RelativeLayout>


                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:checked="true"
                    android:text="@string/remember_password"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/capsule_shape"
                    android:text="@string/s_i_g_n_i_n"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <LinearLayout
                    android:id="@+id/sign_up_for_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="registration"
                        android:text="@string/sign_up_for_an_account"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@android:color/black" />


                </LinearLayout>


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</RelativeLayout>